--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,15 +1,18 @@
-source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '10.0'
+source 'https://mirrors.tuna.tsinghua.edu.cn/git/CocoaPods/Specs.git'
+# source 'https://gitee.com/mirrors/CocoaPods-Specs.git'
+platform :ios, '14.5'
 
 
 target 'quirk' do
   pod 'ExpoKit',
-    :git => "http://github.com/expo/expo.git",
+    # :git => "http://github.com/expo/expo.git",
+    :git => "git@gitee.com:mirrors/Expo.git",
     :tag => "ios/2.13.0",
+    # :branch => "sdk-37",
     :subspecs => [
       "Core"
     ],
-    :inhibit_warnings => true
+    :inhibit_warnings => true   
 
   require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
   use_unimodules!(
@@ -57,6 +60,16 @@ target 'quirk' do
 
 
   post_install do |installer|
+    find_and_replace(
+    "../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm",
+    "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", 
+    "_initializeModules:(NSArray<Class> *)modules")
+    
+    find_and_replace(
+    "../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm",
+    "RCTBridgeModuleNameForClass(module))", 
+    "RCTBridgeModuleNameForClass(Class(module)))"
+    )    
     installer.pods_project.main_group.tab_width = '2';
     installer.pods_project.main_group.indent_width = '2';
 
@@ -104,3 +117,18 @@ target 'quirk' do
     end
   end
 end
+
+  
+def find_and_replace(dir, findstr, replacestr)
+    Dir[dir].each do |name|
+        text = File.read(name)
+        replace = text.gsub(findstr,replacestr)
+        if text != replace
+            puts "Fix: " + name
+            File.open(name, "w") { |file| file.puts replace }
+            STDOUT.flush
+        end
+    end
+    Dir[dir + '*/'].each(&method(:find_and_replace))
+  end
+  
