--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "babel-preset-expo": "^5.0.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.11.1",
+    "graceful-fs": "^4.2.9",
     "prettier": "1.15.3",
     "react-native-dotenv": "^0.2.0",
     "react-native-typescript-transformer": "^1.2.11",
