--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ android {
   buildToolsVersion '28.0.3'
 
   defaultConfig {
-    applicationId 'tech.econn.quirk'
+    applicationId 'com.sspedu.quirk'
     minSdkVersion 21
     targetSdkVersion 28
     versionCode 38
