--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
   xmlns:tools="http://schemas.android.com/tools">
 
   <permission
-    android:name="tech.econn.quirk.permission.C2D_MESSAGE"
+    android:name="com.sspedu.quirk.permission.C2D_MESSAGE"
     android:protectionLevel="signature"/>
 
   <!-- These are required permissions to make the app run -->
-  <uses-permission android:name="tech.econn.quirk.permission.C2D_MESSAGE" />
+  <uses-permission android:name="com.sspedu.quirk.permission.C2D_MESSAGE" />
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.INTERNET" />
@@ -177,7 +177,7 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="tech.econn.quirk" android:path="oauthredirect"/>
+        <data android:scheme="com.sspedu.quirk" android:path="oauthredirect"/>
       </intent-filter>
     </activity>
 
@@ -284,7 +284,7 @@
         <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
         <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
 
-        <category android:name="tech.econn.quirk"/>
+        <category android:name="com.sspedu.quirk"/>
       </intent-filter>
     </receiver>
 
