--- a/ios/quirk/Supporting/Info.plist
+++ b/ios/quirk/Supporting/Info.plist
@@ -31,7 +31,7 @@
 			<string>OAuthRedirect</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>tech.econn.quirk</string>
+				<string>com.sspedu.quirk</string>
 			</array>
 		</dict>
 	</array>
